tests/lean/phashmap_inst_coherence.lean.expected.out
phashmap_inst_coherence.lean:11:0: error: type mismatch at application
  PersistentHashMap.find? m
term
  m
has type
  @PersistentHashMap Nat Nat Nat.Hashable (@beqOfEq Nat (λ (ab : Nat), Nat.DecidableEq a b))
but is expected to have type
  @PersistentHashMap Nat Nat natDiffHash (@beqOfEq Nat (λ (ab : Nat), Nat.DecidableEq a b))
